@@ -1,4 +1,4 @@
-.\"	$OpenBSD: regex.3,v 1.2 1996/08/19 08:31:13 tholo Exp $
+.\"	$OpenBSD: regex.3,v 1.3 1997/04/28 20:45:00 millert Exp $
 .\"
 .\" Copyright (c) 1992, 1993, 1994 Henry Spencer.
 .\" Copyright (c) 1992, 1993, 1994
@@ -34,6 +34,8 @@
 .\" LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
+.\"
+.\"	@(#)regex.3	8.4 (Berkeley) 3/20/94
 .\"
 .TH REGEX 3 "March 20, 1994"
 .de ZR
